force-app/main/default/objects/Booking_Room_Code__c/Booking_Room_Code__c.object-meta.xml
<CustomObject>
    <label>Booking Room Code</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000000000}</displayFormat>
        <label>Booking Room Code Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings Room codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>