force-app/main/default/objects/Booking_Room_Code__c/fields/Access_code__c.field-meta.xml
<CustomField>
    <fullName>Access_code__c</fullName>
    <label>Access code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>