force-app/main/default/objects/Booking_Room_Code__c/fields/Booking_room_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_room_Code_ID__c</fullName>
    <label>Booking room Code ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>