force-app/main/default/objects/Booking_Room_Code__c/fields/Date_Update__c.field-meta.xml
<CustomField>
    <fullName>Date_Update__c</fullName>
    <label>Date Update</label>
    <type>Date</type>
</CustomField>