force-app/main/default/objects/Booking_Room_Code__c/fields/Room_Code__c.field-meta.xml
<CustomField>
    <fullName>Room_Code__c</fullName>
    <label>Room Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>